# ada_topics

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  condaenv.6itmg7ig.requirements.txt  developer_run.sh  environment.yml  package.json  pixi.toml  pyproject.toml  setup.cfg
extra_material/: config.py
extra_material/logical_operators/: config.py  some_material.ipynb
extra_material/logical_operators/screencast/: slides.md
piaac/: PIAAC_selected.arrow  cross-country-example-statsmodels.ipynb  cross-country-example.ipynb  exercises-VL7-solution.ipynb  france_labor.arrow  make_example_data.ipynb  piaac_computer_programming_by_country.arrow  piaac_computer_programming_by_country_and_age_group.arrow  piaac_de_20.arrow  piaac_education_and_computer_by_country.arrow  piaac_education_and_computer_usage_by_country.arrow  piaac_some_5.arrow
piacc/: PIAAC_selected.arrow  make_example_data.ipynb  piaac_computer_programming_by_country.arrow  piaac_computer_programming_by_country_and_age_group.arrow  piaac_de_20.arrow
src/ada_topics/: _config.yml  config.py  landing-page.md  slidev_utilities.py  task_create_book.py  task_create_screencasts.py  task_export_screencasts.py
src/ada_topics/_static/: custom.css
src/ada_topics/chapter_template/: config.py
src/ada_topics/chapter_template/subchapter_1/: objectives_materials.md
src/ada_topics/descriptive_statistics/: config.py  income_distribution.ipynb
src/ada_topics/descriptive_statistics/absolute_relative_diffs/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/central_tendency/: objectives_materials.ipynb
src/ada_topics/descriptive_statistics/central_tendency_cardinal/: config.py  objectives_materials.ipynb
src/ada_topics/descriptive_statistics/central_tendency_cardinal_data/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/central_tendency_old/: config.py
src/ada_topics/descriptive_statistics/central_tendency_ordinal_data/: config.py  objectives_materials.ipynb  objectives_materials.md
src/ada_topics/descriptive_statistics/central_tendency_properties/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/conditional_statistics/: figures.ipynb  objectives_materials.md
src/ada_topics/descriptive_statistics/data_sources/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/histograms/: config.py  objectives_materials.md  sandbox.ipynb
src/ada_topics/descriptive_statistics/missing_data/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/quantiles/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/stocks_flows_levels_changes/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/types_of_data_dtypes/: __init__.py  config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/what_are_data/: config.py  objectives_materials.md
src/ada_topics/descriptive_statistics/what_is_data/: config.py  objectives_materials.ipynb  objectives_materials.md
src/ada_topics/dispersion_and_higher/: config.py
src/ada_topics/dispersion_and_higher/absolute/: config.py  objectives_materials.md
src/ada_topics/dispersion_and_higher/kurtosis/: config.py  objectives_materials.md
src/ada_topics/dispersion_and_higher/skewness/: config.py  objectives_materials.md
src/ada_topics/dispersion_and_higher/squared/: config.py  objectives_materials.md
src/ada_topics/extra_material/: config.py
src/ada_topics/extra_material/logical_operators/: objectives_materials.ipynb
src/ada_topics/getting_help/: config.py
src/ada_topics/getting_help/asking/: config.py  objectives_materials.md
src/ada_topics/getting_help/on_the_web/: config.py  (+1 more)
src/ada_topics/imports/: config.py  internal_overview.md  objectives.md
src/ada_topics/jupyter_notebooks/: config.py
src/ada_topics/pandas_basics/: config.py  examples.ipynb
src/ada_topics/pandas_data/: __init__.py  config.py  dataframe_examples.ipynb
src/ada_topics/pandas_first_steps/: config.py
src/ada_topics/pandas_statistics/: config.py
src/ada_topics/piaac/: france_labor.arrow  piaac_computer_programming_by_country.arrow
src/ada_topics/plotly_graphs/: config.py
src/ada_topics/python_basics/: config.py  content_objectives.md
src/ada_topics/sample_statistics/: slides.md
src/ada_topics/slidev_config/: style.css
src/ada_topics/stats_basics_location/: config.py
src/ada_topics/stats_bivariate/: config.py  sandbox.ipynb
src/ada_topics/stats_dispersion_concentration/: concentration_examples.ipynb  config.py  dispersion_examples.ipynb  income_distribution.ipynb
src/ada_topics/stats_interpretation/: config.py  examples.ipynb
src/ada_topics/stats_misc/: config.py
src/ada_topics/statsmodels_regressions/: __init__.py  config.py  content_objectives.md
vintage-for-picking/data_conceptualization/screencast/: slides.md
vintage-for-picking/descriptive_statistics/central_tendency_cardinal_data/: objectives_materials.ipynb
vintage-for-picking/descriptive_statistics/central_tendency_ordinal_data/: config.py  objectives_materials.ipynb
vintage-for-picking/methods/: config.py
vintage-for-picking/old_quizzes/: assigning_variables.ipynb  boolean_logic.ipynb  datatypes.ipynb  functions_principles.ipynb  groupby.ipynb  import_formula.ipynb  pandas_be.ipynb  results_objects.ipynb  scalar_types.ipynb  strings_intro.ipynb
vintage-for-picking/pandas_data/birds_eye/: objectives_materials.md
vintage-for-picking/pandas_data/datatypes/: config.py  objectives_materials.md
vintage-for-picking/pandas_data/groupby/: objectives_materials.md
vintage-for-picking/piaac/: piaac_de_20.arrow  piaac_some_5.arrow
vintage-for-picking/python_basics/assigning_variables/: config.py
vintage-for-picking/python_basics/functions_basics/: objectives_materials.ipynb
vintage-for-picking/sample_statistics/: slides.md
vintage-for-picking/statsmodels_regressions/import_formula/: example.ipynb  objectives_materials.md
vintage-for-picking/statsmodels_regressions/results_objects/: config.py  objectives_materials.md
(+480 files in other folders)
