[project]
name = "ada_topics"
description = "Applied Data Analytics: Topics"
requires-python = ">=3.12"
dependencies = [
    "pytask"
]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "License :: Free for non-commercial use",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@gmail.com" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "CC-BY-NC-SA-4.0"

[project.urls]
Documentation = "https://github.com/OpenSourceEconomics/ada_topics"
Github = "https://github.com/OpenSourceEconomics/ada_topics"
Tracker = "https://github.com/OpenSourceEconomics/ada_topics/issues"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/ada_topics/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

# ======================================================================================
# Pixi
# ======================================================================================

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]

# Development Dependencies (conda)
# --------------------------------------------------------------------------------------

[tool.pixi.dependencies]
deepdiff = "*"
ipykernel = "*"
ipywidgets = "*"
jupyter-book = ">=1.0.2,<2"
jupyterlab = "*"
nodejs = "*"
openpyxl = "*"
pandas = ">=2.2"
pixi-kernel = ">=0.3.0,<0.4"
plotly = ">=5.2,<6"
pre-commit = "*"
pybaum = "*"
pydata-sphinx-theme = ">=0.13.3"
pygraphviz = "*"
python = ">=3.12.5"
pyyaml = "*"
scipy = "<=1.13"
sphinx = "*"
sphinx-automodapi = "*"
sphinx-copybutton = "*"
sphinxcontrib-mermaid = "*"
statsmodels = "*"
xlrd = ">=1.0"
pyarrow = ">=18.0.0,<19"

# Development Dependencies (pypi)
# --------------------------------------------------------------------------------------

[tool.pixi.pypi-dependencies]
ada_topics = {path = ".", editable = true}
kaleido = "*"
pdbp = "*"
pyperclip = "*"

[tool.pixi.target.win-64.pypi-dependencies]
kaleido = ">=0.1.0.post1,<=0.1.0.post1"


[tool.pytask.ini_options]
paths = ["./src/ada_topics"]
pdbcls = "pdbp:Pdb"

[tool.ruff]
target-version = "py312"
fix = true
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN",  # Missing type annotations.
    "B008", # Do not perform function calls in argument defaults.
    "B018",
    "BLE001",
    "COM812",  # May cause conflict with ruff's formatter.
    "D100",
    "D103", # lots of small functions missing docstrings.
    "EM101",
    "FBT001",
    "FIX002",  # allow TODOs in the code.
    "INP001", # implicit namespace packages; clashes with our pytask examples.
    "ISC001",  # May cause conflict with ruff's formatter.
    "N811", # constant imported as non constant.
    "N999", # Capitalized module name.
    "PD010",
    "PD015",
    "PD901", # `df` used a lot as example variable name.
    "PERF401", # use a list comprehension.
    "PLC2401", # Non-ASCII is good.
    "PLR0913",
    "PLR2004",  # Magic value used in comparison.
    "S101",  # Use of `assert` detected.
    "S110",
    "S301",
    "S602", # `subprocess` call with `shell=True`.
    "T201",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"src/ada_topics/config.py" = ["ERA001"]
"src/ada_topics/python_basics/executing_pytest/screencast/example/test_cobb_douglas.py" = ["PLR2004"]
"**/*.ipynb" = ["B018", "T201", "E402", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.yamlfix]
line_length = 88
none_representation = "null"
