[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "ada-topics"
description = "Applied Data Analytics: Topics"
requires-python = ">=3.12"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: Free for non-commercial use",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [ "pytask" ]
[[project.authors]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@gmail.com"
[project.license]
text = "CC-BY-NC-SA-4.0"
[project.readme]
file = "README.md"
content-type = "text/markdown"
[project.urls]
Documentation = "https://github.com/OpenSourceEconomics/ada_topics"
Github = "https://github.com/OpenSourceEconomics/ada_topics"
Tracker = "https://github.com/OpenSourceEconomics/ada_topics/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/ada_topics/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
target-version = "py314"
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "COM812",  # Conflicts with ruff-format
  "EM101",   # Exception must not use a string literal
  "EM102",   # Exception must not use an f-string literal
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with ruff-format
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
  "TRY003",  # Long messages outside exception class
  "ANN",
  "B008",
  "B018",
  "BLE001",
  "D100",
  "D103",
  "FBT001",
  "INP001",
  "N811",
  "N999",
  "PD010",
  "PD013",
  "PD015",
  "PERF401",
  "PLC2401",
  "PLR0913",
  "PLR2004",
  "S101",
  "S110",
  "S301",
  "S307",
  "S602",
  "T201",
]
per-file-ignores."**/*.ipynb" = [ "B018", "E402", "ERA001", "PLR2004", "T201" ]
per-file-ignores."src/ada_topics/config.py" = [ "ERA001" ]
per-file-ignores."src/ada_topics/python_basics/executing_pytest/screencast/example/test_cobb_douglas.py" = [
  "PLR2004"
]
per-file-ignores."tests/*" = [ "INP001", "S101" ]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch", "tool.pytest", "tool.pytask", "tool.ty" ]
expand_tables = [
  "tool.pixi.dependencies",
  "tool.pixi.workspace",
  "tool.pixi.pypi-dependencies",
  "tool.pixi.pypi-dependencies.ada_topics",
  "tool.pixi.target",
  "tool.pixi.target.win-64",
  "tool.pixi.target.win-64.pypi-dependencies",
]

[tool.pytest]
ini_options.addopts = [ "--pdbcls=pdbp:Pdb" ]
ini_options.filterwarnings = []
ini_options.norecursedirs = [ "docs" ]

[tool.ty]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.ignore-comment-unknown-rule = "error"
rules.invalid-argument-type = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-return-type = "error"
rules.possibly-missing-attribute = "error"
rules.possibly-missing-implicit-call = "error"
rules.possibly-missing-import = "error"
rules.possibly-unresolved-reference = "error"
rules.redundant-cast = "error"
rules.undefined-reveal = "error"
rules.unresolved-global = "error"
rules.unsupported-base = "error"
rules.unused-ignore-comment = "error"
rules.useless-overload-body = "error"

[tool.yamlfix]
line_length = 88
none_representation = "null"
sequence_style = "block_style"

[tool.pixi]
# Development Dependencies (conda)
# --------------------------------------------------------------------------------------
[tool.pixi.dependencies]
data-morph-ai = ">=0.2.0,<0.3"
deepdiff = "*"
ipykernel = "*"
ipywidgets = "*"
jupyter-book = ">=1.0.2,<2"
jupyterlab = "*"
mscorefonts = ">=0.0.1,<0.0.2"
nodejs = "*"
openpyxl = "*"
pandas = ">=2.2"
plotly = ">=5.2,<6"
pre-commit = "*"
pyarrow = ">=19.0"
pybaum = "*"
pydata-sphinx-theme = ">=0.13.3"
pygraphviz = "*"
python = ">=3.12.5"
pyyaml = "*"
scipy = "<=1.13"
seaborn = ">=0.13.2,<0.14"
sphinx = "*"
sphinx-automodapi = "*"
sphinx-copybutton = "*"
sphinxcontrib-mermaid = "*"
statsmodels = "*"
xlrd = ">=1.0"
[tool.pixi.pypi-dependencies]
ada_topics = { path = ".", editable = true }
kaleido = "*"
pdbp = "*"
pyperclip = "*"
[tool.pixi.target]
win-64.pypi-dependencies.kaleido = ">=0.1.0.post1,<=0.1.0.post1"
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "win-64" ]

[tool.pytask]
ini_options.paths = [ "./src/ada_topics" ]
ini_options.pdbcls = "pdbp:Pdb"
